# template-trabalho-python

./: .env.example  mkdocs.yml  pyproject.toml
docs/: reference.md
template_trabalho_python/: env_vars.py  main.py
tests/: test_primeiro_teste.py
