[tool.poetry]
name = "template-trabalho-python"
version = "0.1.0"
description = ""
authors = ["Gabriel Dornas <gabrielbdornas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
taskipy = "^1.14.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.49"
mkdocstrings-python = "^1.12.2"


[tool.poetry.group.dev.dependencies]
mkdocs-macros-plugin = "^1.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
env = { cmd = "cp .env.example .env", help = "Cria arquivo .env." }
docs = { cmd = "mkdocs serve", help = "Ligar servidor da documentação." }
